--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Jinja2==3.1.4
 MarkupSafe==3.0.2
 msgspec==0.18.6
 packaging==24.2
+PyMySQL==1.1.1
 pytz==2024.2
 requests==2.32.3
 SQLAlchemy==2.0.36
