--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dominate==2.9.1
 Flask==3.1.0
 Flask-Bootstrap==3.3.7.1
 Flask-Mail==0.10.0
+Flask-MySQL==1.6.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
@@ -20,6 +21,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 msgspec==0.18.6
+mysql-connector-python==9.2.0
 packaging==24.2
 PyMySQL==1.1.1
 pytz==2024.2
