--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ packaging==24.2
 PyMySQL==1.1.1
 pyotp==2.9.0
 pytz==2024.2
+python-dotenv==1.0.0
 requests==2.32.3
 SQLAlchemy==2.0.36
 sqlparse==0.5.1
