--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,96 @@
-aiosmtpd==1.4.6
-alembic==1.15.2
-annotated-types==0.7.0
-anyio==4.9.0
-atpublic==5.0
-attrs==24.3.0
-azure-ai-inference==1.0.0b9
-azure-core==1.34.0
-bidict==0.23.1
-blinker==1.9.0
-cachelib==0.13.0
-cachetools==5.5.2
-certifi==2024.8.30
-chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
-cs50==9.4.0
-deepseek==1.0.0
-distro==1.9.0
-dnspython==2.7.0
-docstring_parser==0.16
-dominate==2.9.1
-eventlet==0.33.3
-Flask==2.3.3
-Flask-Bootstrap==3.3.7.1
-Flask-Mail==0.9.1
-Flask-Migrate==4.1.0
-Flask-MySQL==1.6.0
-Flask-Session==0.8.0
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-google-api-core==2.24.2
-google-auth==2.39.0
-google-cloud-aiplatform==1.71.1
-google-cloud-bigquery==3.31.0
-google-cloud-core==2.4.3
-google-cloud-resource-manager==1.14.2
-google-cloud-storage==2.19.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-greenlet==3.1.1
-grpc-google-iam-v1==0.14.2
-grpcio==1.71.0
-grpcio-status==1.71.0
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.10
-isodate==0.7.2
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jiter==0.9.0
-Mako==1.3.10
-MarkupSafe==3.0.2
-msgspec==0.18.6
-mysql-connector-python==8.1.0
-numpy==2.2.4
-openai==1.77.0
-packaging==24.2
-pdfkit==1.0.0
-Pillow==10.0.1
-proto-plus==1.26.1
-protobuf==4.21.12
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.2
-pydantic_core==2.33.1
-PyMySQL==1.1.1
-pyotp==2.9.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-engineio==4.8.0
-python-socketio==5.10.0
-pytz==2024.2
-reportlab==4.1.0
-requests==2.32.3
-rsa==4.9.1
-shapely==2.1.0
-simple-websocket==1.1.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.21
-sqlparse==0.5.1
-termcolor==2.5.0
-tqdm==4.67.1
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-urllib3==2.2.3
-validate-email-address==1
-vertexai==1.71.1
-visitor==0.1.3
-Werkzeug==2.3.7
-wheel==0.45.0
-wsproto==1.2.0
+aiosmtpd
+alembic
+annotated-types
+anyio
+atpublic
+attrs
+azure-ai-inference
+azure-core
+bidict
+blinker
+cachelib
+cachetools
+certifi
+chardet
+charset-normalizer
+click
+cs50
+deepseek
+distro
+dnspython
+docstring_parser
+dominate
+eventlet
+Flask
+Flask-Bootstrap
+Flask-Mail
+Flask-Migrate
+Flask-MySQL
+Flask-Session
+Flask-SocketIO
+Flask-SQLAlchemy
+google-api-core
+google-auth
+google-cloud-aiplatform
+google-cloud-bigquery
+google-cloud-core
+google-cloud-resource-manager
+google-cloud-storage
+google-crc32c
+google-resumable-media
+googleapis-common-protos
+greenlet
+grpc-google-iam-v1
+grpcio
+grpcio-status
+gunicorn
+h11
+httpcore
+httpx
+idna
+isodate
+itsdangerous
+Jinja2
+jiter
+Mako
+MarkupSafe
+msgspec
+mysql-connector-python
+numpy
+openai
+packaging
+pdfkit
+Pillow
+proto-plus
+protobuf
+pyasn1
+pyasn1_modules
+pydantic
+pydantic_core
+PyMySQL
+pyotp
+python-dateutil
+python-dotenv
+python-engineio
+python-socketio
+pytz
+reportlab
+requests
+rsa
+shapely
+simple-websocket
+six
+sniffio
+SQLAlchemy
+sqlparse
+termcolor
+tqdm
+typing-inspection
+typing_extensions
+urllib3
+validate-email-address
+vertexai
+visitor
+Werkzeug
+wheel
+wsproto
